fix: add colour.mdx to prettierignore as it was making some wierd linting choices. update colour doc based on lauras feedback and clean up

--- a/packages/storybook-html/stories/components/core/colour.mdx
+++ b/packages/storybook-html/stories/components/core/colour.mdx
@@ -9,6 +9,8 @@ Colour plays an key role in establishing a strong and consistent visual identity
 
 ### Brand colours
 
+UQ brand purple and gradient
+
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
@@ -28,22 +30,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#51247a</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary brand colour. Used for interactive elements like buttons and
-        link text.
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple-600"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-600</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        <code>#4B2271</code>
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Used as contrast colour for secondary navigation.
+        Primary brand colour
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -57,13 +44,17 @@ Colour plays an key role in establishing a strong and consistent visual identity
         -
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Used to apply UQ's purple gradient
+        UQ's purple gradient
       </td>
     </tr>
   </tbody>
 </table>
 <br />
-### Neutral colours
+
+### Text colours
+
+Headings and body copy
+
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
@@ -83,7 +74,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#19151c</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Used for all heading colours
+        Heading colour
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -97,8 +88,68 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#3b383e</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Used for all body copy
+        Body copy
       </td>
+    </tr>
+  </tbody>
+</table>
+<br />
+
+### Link and button colours
+
+Interactive elements
+
+<table className="uqds-table uqds-table--card uqds-table--colour">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading">Example</th>
+      <th className="uqds-table__heading">Variable</th>
+      <th className="uqds-table__heading">HEX</th>
+      <th className="uqds-table__heading">Usage</th>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--purple-500"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$purple-500</code>
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        <code>#51247a</code>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Interactive elements like buttons and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--utility-500"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$utility-500</code>
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        <code>#0d6dcd</code>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Focus state
+      </td>
+    </tr>
+  </tbody>
+</table>
+<br />
+
+### Neutral colours
+
+Backgrounds and borders
+
+<table className="uqds-table uqds-table--card uqds-table--colour">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading">Example</th>
+      <th className="uqds-table__heading">Variable</th>
+      <th className="uqds-table__heading">HEX</th>
+      <th className="uqds-table__heading">Usage</th>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
@@ -111,7 +162,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#757377</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Used for de-emphasised text eg. breadcrumbs, tags
+        De-emphasised text eg. breadcrumbs, tags
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -153,7 +204,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#f3f3f4</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Used as background colour to highlight sections, cards or panes
+        Background colour to highlight sections, cards or panes
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -195,8 +246,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#0d6dcd</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Focus state as well as background for global non-critical information
-        alerts
+        Background for global non-critical information alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -210,7 +260,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#e7f0fa</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Background colour for non-critical information alerts
+        Background for non-critical information alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -348,33 +398,15 @@ Our colours are created based off these scales below. If darker or lighter shade
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--utility-50">utility-50</div>
-  <div className="uqds-colour__palette uqds-colour--utility-100">
-    utility-100
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-200">
-    utility-200
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-300">
-    utility-300
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-400">
-    utility-400
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-500">
-    utility-500
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-600">
-    utility-600
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-700">
-    utility-700
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-800">
-    utility-800
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-900">
-    utility-900
-  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-100">utility-100</div>
+  <div className="uqds-colour__palette uqds-colour--utility-200">utility-200</div>
+  <div className="uqds-colour__palette uqds-colour--utility-300">utility-300</div>
+  <div className="uqds-colour__palette uqds-colour--utility-400">utility-400</div>
+  <div className="uqds-colour__palette uqds-colour--utility-500">utility-500</div>
+  <div className="uqds-colour__palette uqds-colour--utility-600">utility-600</div>
+  <div className="uqds-colour__palette uqds-colour--utility-700">utility-700</div>
+  <div className="uqds-colour__palette uqds-colour--utility-800">utility-800</div>
+  <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
 </div>
 
 #### Error
@@ -396,64 +428,28 @@ Our colours are created based off these scales below. If darker or lighter shade
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--warning-50">warning-50</div>
-  <div className="uqds-colour__palette uqds-colour--warning-100">
-    warning-100
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-200">
-    warning-200
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-300">
-    warning-300
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-400">
-    warning-400
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-500">
-    warning-500
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-600">
-    warning-600
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-700">
-    warning-700
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-800">
-    warning-800
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-900">
-    warning-900
-  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-100">warning-100</div>
+  <div className="uqds-colour__palette uqds-colour--warning-200">warning-200</div>
+  <div className="uqds-colour__palette uqds-colour--warning-300">warning-300</div>
+  <div className="uqds-colour__palette uqds-colour--warning-400">warning-400</div>
+  <div className="uqds-colour__palette uqds-colour--warning-500">warning-500</div>
+  <div className="uqds-colour__palette uqds-colour--warning-600">warning-600</div>
+  <div className="uqds-colour__palette uqds-colour--warning-700">warning-700</div>
+  <div className="uqds-colour__palette uqds-colour--warning-800">warning-800</div>
+  <div className="uqds-colour__palette uqds-colour--warning-900">warning-900</div>
 </div>
 
 #### Success
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--success-50">success-50</div>
-  <div className="uqds-colour__palette uqds-colour--success-100">
-    success-100
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-200">
-    success-200
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-300">
-    success-300
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-400">
-    success-400
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-500">
-    success-500
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-600">
-    success-600
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-700">
-    success-700
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-800">
-    success-800
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-900">
-    success-900
-  </div>
+  <div className="uqds-colour__palette uqds-colour--success-100">success-100</div>
+  <div className="uqds-colour__palette uqds-colour--success-200">success-200</div>
+  <div className="uqds-colour__palette uqds-colour--success-300">success-300</div>
+  <div className="uqds-colour__palette uqds-colour--success-400">success-400</div>
+  <div className="uqds-colour__palette uqds-colour--success-500">success-500</div>
+  <div className="uqds-colour__palette uqds-colour--success-600">success-600</div>
+  <div className="uqds-colour__palette uqds-colour--success-700">success-700</div>
+  <div className="uqds-colour__palette uqds-colour--success-800">success-800</div>
+  <div className="uqds-colour__palette uqds-colour--success-900">success-900</div>
 </div>
