fix: heading update from laura

--- a/packages/storybook-html/stories/components/core/colour.mdx
+++ b/packages/storybook-html/stories/components/core/colour.mdx
@@ -351,7 +351,7 @@ Backgrounds and borders
 </table>
 <br />
 
-### Full spectrum of colours
+### UQ colour palette
 
 Our colours are created based off these scales below. If darker or lighter shaded are required they must be selected from this palette. Any introduction of colour outside those use cases above must be reviewed by the Design System team.
 
