--- a/packages/storybook-html/stories/patterns/priority/priority.mdx
+++ b/packages/storybook-html/stories/patterns/priority/priority.mdx
@@ -14,7 +14,10 @@ Dark indicates higher importance,
 Does direction play a role in your scale. wil
 
 Colour meaning, Green, red vs neutrals 
-
+Red: Urgent, High Focus, Issue
+Yellow: warning, focus. 
+Green: Approval, Good, low focus
+Neutrals: Lower, Less focus 
 
 ## Types of scales
 
