Link and titile updates

--- a/packages/storybook-html/stories/deprecated/header-legacy/header.mdx
+++ b/packages/storybook-html/stories/deprecated/header-legacy/header.mdx
@@ -19,7 +19,7 @@ quickly identify and trust UQ websites.
 ## With global search only
 
 Provides the UQ strapline, global links, and a general UQ site search feature
-using [_UQ Search_](https://www.uq.edu.au/search).
+using [_UQ Search_](https://search.uq.edu.au).
 
 > Don't reappropriate the search function for special integrated search
 > functionality within your application e.g. searching for a location on a map,
@@ -154,7 +154,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
 ## With global and site search
 
 Provides the UQ strapline, global links, and a site search feature using
-[_UQ Search_](https://www.uq.edu.au/search). Two radio options are included to
+[_UQ Search_](https://search.uq.edu.au). Two radio options are included to
 allow users to choose to search all UQ sites or just the content on your site\*.
 
 > \*If your application/website isn't indexed by UQ Search, please opt
