--- a/packages/storybook-html/stories/components/blockquote/blockquote.mdx
+++ b/packages/storybook-html/stories/components/blockquote/blockquote.mdx
@@ -18,9 +18,7 @@ The blockquote component is used for quoting a passage of text or speech, the au
 
 Displays the blockquote text, author, and source in purple text for use on light backgrounds such as white or light-grey.
 
-<Canvas>
-  <Story of={BlockquoteStories.blockquote} />
-</Canvas>
+<Canvas of={BlockquoteStories.blockquote} />
 
 ```html
 <figure class="blockquote">
@@ -47,9 +45,7 @@ Displays the blockquote text, author, and source in purple text for use on light
 
 Changes the colour of the blockquote text to white so it can be used on darker backgrounds such as UQ purple.
 
-<Canvas>
-  <Story of={BlockquoteStories.blockquoteLight} />
-</Canvas>
+<Canvas of={BlockquoteStories.blockquoteLight} />
 
 ```html
 <figure class="blockquote blockquote--light">
