--- a/packages/storybook-html/stories/components/body/body-elements.mdx
+++ b/packages/storybook-html/stories/components/body/body-elements.mdx
@@ -12,45 +12,31 @@ import * as BodyElementsStories from "./body-elements.stories";
 
 ## Title
 
-<Canvas>
-  <Story of={BodyElementsStories.title} />
-</Canvas>
+<Canvas of={BodyElementsStories.title} />
 
 ## Header
 
-<Canvas>
-  <Story of={BodyElementsStories.header} />
-</Canvas>
+<Canvas of={BodyElementsStories.header} />
 
 ## Text block
 
-<Canvas>
-  <Story of={BodyElementsStories.textBlock} />
-</Canvas>
+<Canvas of={BodyElementsStories.textBlock} />
 
 ## Unordered list (`<ul>`)
 
-<Canvas>
-  <Story of={BodyElementsStories.unorderedList} />
-</Canvas>
+<Canvas of={BodyElementsStories.unorderedList} />
 
 ## Ordered list (`<ol>`)
 
-<Canvas>
-  <Story of={BodyElementsStories.orderedList} />
-</Canvas>
+<Canvas of={BodyElementsStories.orderedList} />
 
 ## Definition list (`<dl>`)
 
-<Canvas>
-  <Story of={BodyElementsStories.definitionList} />
-</Canvas>
+<Canvas of={BodyElementsStories.definitionList} />
 
 ## Horizontal rule (`<hr/>`)
 
-<Canvas>
-  <Story of={BodyElementsStories.horizontalRule} />
-</Canvas>
+<Canvas of={BodyElementsStories.horizontalRule} />
 
 ## Video
 
