--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -12,32 +12,22 @@ import * as CardStories from "./card.stories";
 
 ## Overview
 
-<Canvas>
-  <Story of={CardStories.Card} />
-</Canvas>
+<Canvas of={CardStories.Card} />
 
 ## Variants
 
 ### Text
 
-<Canvas>
-  <Story of={CardStories.Text} />
-</Canvas>
+<Canvas of={CardStories.Text} />
 
 ### Image
 
-<Canvas>
-  <Story of={CardStories.Image} />
-</Canvas>
+<Canvas of={CardStories.Image} />
 
 ### Icon
 
-<Canvas>
-  <Story of={CardStories.Icon} />
-</Canvas>
+<Canvas of={CardStories.Icon} />
 
 ### Icon nav
 
-<Canvas>
-  <Story of={CardStories.IconNav} />
-</Canvas>
+<Canvas of={CardStories.IconNav} />
