--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.mdx
@@ -24,26 +24,18 @@ There are 4 elements within the basic hero.
 
 There are no size or colour variations for the basic hero component.
 
-<Canvas>
-  <Story of={HeroBasicStories.HeroBasic} />
-</Canvas>
+<Canvas of={HeroBasicStories.HeroBasic} />
 
 ## Examples
 
 ### Basic
 
-<Canvas>
-  <Story of={HeroBasicStories.Basic} />
-</Canvas>
+<Canvas of={HeroBasicStories.Basic} />
 
 ### Program
 
-<Canvas>
-  <Story of={HeroBasicStories.Program} />
-</Canvas>
+<Canvas of={HeroBasicStories.Program} />
 
 ### Plan
 
-<Canvas>
-  <Story of={HeroBasicStories.Plan} />
-</Canvas>
+<Canvas of={HeroBasicStories.Plan} />
