--- a/packages/storybook-html/stories/components/navigation/local-nav/local-nav.mdx
+++ b/packages/storybook-html/stories/components/navigation/local-nav/local-nav.mdx
@@ -13,9 +13,7 @@ import * as LocalNavStories from "./local-nav.stories";
 
 The `.uq-local-nav` element provides local navigation for desktop.
 
-<Canvas>
-  <Story of={LocalNavStories.LocalNav} />
-</Canvas>
+<Canvas of={LocalNavStories.LocalNav} />
 
 ### How-to
 
