--- a/packages/storybook-html/stories/components/pane/pane.mdx
+++ b/packages/storybook-html/stories/components/pane/pane.mdx
@@ -11,44 +11,30 @@ import * as PaneStories from "./pane.stories";
 
 ## Overview
 
-<Canvas>
-  <Story of={PaneStories.Pane} />
-</Canvas>
+<Canvas of={PaneStories.Pane} />
 
 ## Variants
 
 ### Text
 
-<Canvas>
-  <Story of={PaneStories.Text} />
-</Canvas>
+<Canvas of={PaneStories.Text} />
 
 ### Text Shaded
 
-<Canvas>
-  <Story of={PaneStories.TextShaded} />
-</Canvas>
+<Canvas of={PaneStories.TextShaded} />
 
 ### Image
 
-<Canvas>
-  <Story of={PaneStories.Image} />
-</Canvas>
+<Canvas of={PaneStories.Image} />
 
 ### Icon
 
-<Canvas>
-  <Story of={PaneStories.Icon} />
-</Canvas>
+<Canvas of={PaneStories.Icon} />
 
 ### Icon Large
 
-<Canvas>
-  <Story of={PaneStories.IconLarge} />
-</Canvas>
+<Canvas of={PaneStories.IconLarge} />
 
 ### Icon Shaded
 
-<Canvas>
-  <Story of={PaneStories.IconShaded} />
-</Canvas>
+<Canvas of={PaneStories.IconShaded} />
