--- a/packages/storybook-html/stories/components/story-card/story-card.mdx
+++ b/packages/storybook-html/stories/components/story-card/story-card.mdx
@@ -11,26 +11,18 @@ import * as StoryCardStories from "./story-card.stories";
 
 ## Overview
 
-<Canvas>
-  <Story of={StoryCardStories.StoryCard} />
-</Canvas>
+<Canvas of={StoryCardStories.StoryCard} />
 
 ## Variants
 
 ### Story
 
-<Canvas>
-  <Story of={StoryCardStories.StoryCard} />
-</Canvas>
+<Canvas of={StoryCardStories.StoryCard} />
 
 ### News
 
-<Canvas>
-  <Story of={StoryCardStories.NewsCard} />
-</Canvas>
+<Canvas of={StoryCardStories.NewsCard} />
 
 ### Event
 
-<Canvas>
-  <Story of={StoryCardStories.EventCard} />
-</Canvas>
+<Canvas of={StoryCardStories.EventCard} />
