--- a/packages/storybook-html/stories/layout/card-grid/card-grid.mdx
+++ b/packages/storybook-html/stories/layout/card-grid/card-grid.mdx
@@ -30,20 +30,14 @@ target cards per row modifier classes below.
 The child elements should be a `.uq-card` or `.uq-pane` to ensure that the
 height of cards on each row is uniform.
 
-<Canvas>
-  <Story of={CardGridStories.CardGrid} />
-</Canvas>
+<Canvas of={CardGridStories.CardGrid} />
 
 ## Examples
 
 ### With Cards
 
-<Canvas>
-  <Story of={CardGridStories.CardsExample} />
-</Canvas>
+<Canvas of={CardGridStories.CardsExample} />
 
 ### With Panes
 
-<Canvas>
-  <Story of={CardGridStories.PanesExample} />
-</Canvas>
+<Canvas of={CardGridStories.PanesExample} />
