--- a/packages/storybook-html/stories/layout/container/container.mdx
+++ b/packages/storybook-html/stories/layout/container/container.mdx
@@ -24,9 +24,7 @@ The `.uq-container` element can be used anywhere, for example nested within othe
 It must not be a descendant of other `.uq-container` elements or elements that use
 `@include layout-containment`.
 
-<Canvas>
-  <Story of={ContainerStories.Container} />
-</Canvas>
+<Canvas of={ContainerStories.Container} />
 
 ```html
 <div class="uq-container"></div>
