--- a/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.mdx
@@ -24,9 +24,7 @@ Then implement the component as per the HTML example below.
 `.uq-section` elements are then used within `.uq-sidebar-layout__main` to
 provide correct **section spacing**.
 
-<Canvas>
-  <Story of={SidebarStories.Sidebar} />
-</Canvas>
+<Canvas of={SidebarStories.Sidebar} />
 
 ```html
 <div class="uq-container">
@@ -43,6 +41,4 @@ provide correct **section spacing**.
 
 #### Sidebar layout with Local Nav, sections and card grids
 
-<Canvas>
-  <Story of={SidebarStories.LocalNavExample} />
-</Canvas>
+<Canvas of={SidebarStories.LocalNavExample} />
